# vision-transformers

./: .gitignore  README.md  data.py  dl-oxford-flowers102.py  model.py  pyproject.toml  requirements.txt  swin-scratchpad.ipynb  train.py  utils.py
config/: default.yaml
config/dataset/: cifar100.yaml  oxford-flowers102.yaml  tiny-imagenet.yaml
config/device/: auto.yaml
config/model/: DeiT-T-8.yaml  Swin-B.yaml  Swin-S.yaml  Swin-T-TinyImageNet.yaml  Swin-T.yaml  ViT-B-16.yaml  ViT-B-32.yaml  ViT-H-14.yaml  ViT-L-16.yaml  ViT-L-32.yaml  ViT-T-8.yaml  base-16.yaml  base.yaml  tiny-8.yaml  tiny.yaml
config/run/: deit-cifar100.yaml  swin-tiny-imagenet.yaml  vit-cifar100.yaml  vit-tiny-imagenet.yaml
misc/: dataset.ipynb  scratch.ipynb
model/: __init__.py  deit.py  swin.py  vit.py
tests/: test_swin.py  test_vit.py
