[project]
name = "vision-transformers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets==4.0.0",
    "einops==0.8.1",
    "hydra-core==1.3.2",
    "ipykernel==6.29.5",
    "matplotlib==3.10.3",
    "python-dotenv==1.1.1",
    "pytz==2025.2",
    "scipy==1.16.1",
    "torch==2.7.1",
    "torchvision==0.22.1",
    "tqdm==4.67.1",
    "wandb==0.21.0",
]
